--- a/src/HoneywellWeb/Views/Home/Upload.cshtml
+++ b/src/HoneywellWeb/Views/Home/Upload.cshtml
@@ -13,9 +13,9 @@
     <button type="submit" class="btn btn-primary">Upload</button>
 </form>
 
-@if (!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
+@if (!ViewData.ModelState.IsValid)
 {
     <div class="alert alert-danger">
-        @ViewData["ErrorMessage"]
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
     </div>
 }
