--- a/src/Application/HoneywellWeb/Views/Home/Index.cshtml
+++ b/src/Application/HoneywellWeb/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Honeywell.Models.VideoFile>
+﻿@model IEnumerable<Honeywell.Models.ViewModels.VideoVM>
 @using Honeywell.Utility.Helpers;
 @{
     ViewData["Title"] = "Home Page";
