Create Upload Controller

--- a/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
+++ b/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Upload Video</h2>
 
-<form method="post" enctype="multipart/form-data">
+<form asp-action="Upload" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="files">Choose Video File (MP4 only)</label>
         <input type="file" class="form-control" id="files" name="files" multiple/>
