seperate video Player js file

--- a/src/Application/HoneywellWeb/Views/Home/Index.cshtml
+++ b/src/Application/HoneywellWeb/Views/Home/Index.cshtml
@@ -37,19 +37,4 @@
 </table>
 
 <!-- JavaScript to handle click event and play the video -->
-<script type="text/javascript">
-    function playVideo(filePath) {
-        // Get the video player and source elements
-        const videoPlayer = document.getElementById('videoPlayer');
-        const videoSource = document.getElementById('videoSource');
-
-        // Update the video source
-        videoSource.src = filePath;
-
-        // Load the new video
-        videoPlayer.load();
-
-        // Play the video
-        videoPlayer.play();
-    }
-</script>
+<script src="~/js/videoPlayer.js"></script>
