--- a/src/Application/HoneywellWeb/wwwroot/css/site.css
+++ b/src/Application/HoneywellWeb/wwwroot/css/site.css
@@ -22,9 +22,9 @@ body {
     display: flex;
     justify-content: center; /* Centers horizontally */
     align-items: center; /* Centers vertically */
-    height: 400px; /* You can adjust this based on your layout */
+    height: 800px;
     margin-bottom: 20px;
-    background-color: #f5f5f5; /* Optional: a background color to visually distinguish the container */
+    background-color: #f5f5f5;
 }
 
 /* Wrapper to ensure consistent video size */
@@ -37,8 +37,8 @@ body {
 
 /* Ensures the video has a consistent size */
 .consistent-video-size {
-    width: 640px; /* Fixed width */
-    height: 360px; /* Fixed height */
+    width: 1280px; 
+    height: 720px; 
     max-width: 100%; /* Ensure responsiveness */
     object-fit: cover; /* Ensures the video fits within the specified dimensions */
 }
