--- a/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
+++ b/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
@@ -10,7 +10,9 @@
         <label for="files">Choose Video File (MP4 only)</label>
         <input type="file" class="form-control" id="files" name="files" multiple/>
     </div>
-    <button type="submit" class="btn btn-primary">Upload</button>
+    <div class="mt-2">
+        <button type="submit" class="btn btn-primary">Upload</button>
+    </div>
 </form>
 
 @if (!ViewData.ModelState.IsValid)
