--- a/src/Application/HoneywellWeb/Views/Shared/_Layout.cshtml
+++ b/src/Application/HoneywellWeb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - HoneywellWeb</title>
+    <title>@ViewData["Title"] - Honeywell</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
@@ -18,7 +18,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - HoneywellWeb 
+        &copy; 2024 - Honeywell
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
