--- a/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
+++ b/src/Application/HoneywellWeb/Views/Upload/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
 }
 
-<h2>Upload Video</h2>
+<h2>Upload Videos</h2>
 
 <!-- Include the loading spinner partial view -->
 <div id="loading-spinner">
@@ -12,7 +12,7 @@
 
 <form asp-action="Index" method="post" enctype="multipart/form-data" id="uploadForm">
     <div class="form-group">
-        <label for="files">Choose Video File (MP4 only)</label>
+        <label for="files">Choose Video Files (MP4 only)</label>
         <input type="file" class="form-control" id="files" name="files" multiple/>
     </div>
     <div class="mt-2">
